<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="vgs_checkout_sdk_name">VGS Checkout</string>

    <!--Checkout -->
    <string name="vgs_checkout_form_title">Select a payment method:</string>
    <string name="vgs_checkout_pay_with_card_title">Or pay with card</string>

    <!--Card info -->
    <string name="vgs_checkout_form_card_details_title">Card Details</string>
    <string name="vgs_checkout_card_holder_subtitle">Name on card</string>
    <string name="vgs_checkout_card_holder_hint">Joe Business</string>
    <string name="vgs_checkout_card_holder_empty_error">Name is empty</string>
    <string name="vgs_checkout_card_number_subtitle">Card number</string>
    <string name="vgs_checkout_card_number_hint">1234 1234 1234 1234</string>
    <string name="vgs_checkout_card_number_invalid_error">Enter a valid card number</string>
    <string name="vgs_checkout_card_number_empty_error">Card number is empty</string>
    <string name="vgs_checkout_card_expiration_date_subtitle">Expiration Date</string>
    <string name="vgs_checkout_card_expiration_date_hint">MM/YY</string>
    <string name="vgs_checkout_card_expiration_date_invalid_error">Expiration date is not valid</string>
    <string name="vgs_checkout_card_expiration_date_empty_error">Expiration date is empty</string>
    <string name="vgs_checkout_card_verification_code_subtitle">Security code</string>
    <string name="vgs_checkout_card_verification_code_hint">CVC</string>
    <string name="vgs_checkout_card_verification_value_hint">CVV</string>
    <string name="vgs_checkout_card_verification_code_invalid_error">Security code is not valid</string>
    <string name="vgs_checkout_card_verification_code_empty_error">Security code is empty</string>

    <!--Address info -->
    <string name="vgs_checkout_form_billing_address_title">Billing Address</string>
    <string name="vgs_checkout_address_info_country_subtitle">Country</string>
    <string name="vgs_checkout_address_info_region_type_state_subtitle">State</string>
    <string name="vgs_checkout_address_info_region_type_state_hint">State</string>
    <string name="vgs_checkout_address_info_state_empty_error">State is empty</string>
    <string name="vgs_checkout_address_info_region_type_suburb_subtitle">Suburb</string>
    <string name="vgs_checkout_address_info_region_type_suburb_hint">Suburb</string>
    <string name="vgs_checkout_address_info_suburb_empty_error">Suburb is empty</string>
    <string name="vgs_checkout_address_info_region_type_province_subtitle">Province</string>
    <string name="vgs_checkout_address_info_region_type_province_hint">Province</string>
    <string name="vgs_checkout_address_info_province_empty_error">Province is empty</string>
    <string name="vgs_checkout_address_info_region_type_county_subtitle">County</string>
    <string name="vgs_checkout_address_info_region_type_county_hint">County</string>
    <string name="vgs_checkout_address_info_county_empty_error">County is empty</string>
    <string name="vgs_checkout_address_info_region_type_unknown_subtitle">State/Province/Region</string>
    <string name="vgs_checkout_address_info_region_type_unknown_hint">State/Province/Region</string>
    <string name="vgs_checkout_address_info_region_unknown_empty_error">State/Province/Region is empty</string>
    <string name="vgs_checkout_address_info_city_subtitle">City</string>
    <string name="vgs_checkout_address_info_city_hint">City</string>
    <string name="vgs_checkout_address_info_city_empty_error">City is empty</string>
    <string name="vgs_checkout_address_info_address_line1_subtitle">Address line 1</string>
    <string name="vgs_checkout_address_info_address_line1_hint">Address line 1</string>
    <string name="vgs_checkout_address_info_address_line1_empty_error">Address line 1 is empty</string>
    <string name="vgs_checkout_address_info_address_line2_subtitle">Address line 2 (Optional)</string>
    <string name="vgs_checkout_address_info_address_line2_hint">Address line 2 (Optional)</string>
    <string name="vgs_checkout_address_info_line2_empty_error">Address line 2 is empty</string>
    <string name="vgs_checkout_address_info_zip_subtitle">Zip Code</string>
    <string name="vgs_checkout_address_info_zip_hint">12345</string>
    <string name="vgs_checkout_address_info_zipcode_invalid_error">ZIP is invalid</string>
    <string name="vgs_checkout_address_info_zipcode_empty_error">ZIP is empty</string>
    <string name="vgs_checkout_address_info_postal_code_subtitle">Postal Code</string>
    <string name="vgs_checkout_address_info_postal_code_hint">K1A0B1</string>
    <string name="vgs_checkout_address_info_postal_code_invalid_error">Postal code is invalid</string>
    <string name="vgs_checkout_address_info_postal_code_empty_error">Postal code is empty</string>

    <!--Pay button -->
    <string name="vgs_checkout_pay_button_title">Pay</string>
    <string name="vgs_checkout_pay_button_processing_title">Payment Processing…</string>

    <!-- Collect -->
    <string name="vgs_checkout_error_internet_permission">Permission denied (missing INTERNET permission?)</string>
    <string name="vgs_checkout_error_internet_connection">No Internet connection</string>
    <string name="vgs_checkout_error_url_validation">URL is not valid</string>
    <string name="vgs_checkout_error_time_out">TimeoutException </string>
    <string name="vgs_checkout_error_field_validation">Field %1$s is not a valid.</string>
    <string name="vgs_checkout_error_field_name_not_set">Field name is not set.</string>
    <string name="vgs_checkout_error_file_size_validation">File size is over limit.</string>
    <string name="vgs_checkout_error_file_not_fount">File not found</string>
    <string name="vgs_checkout_error_file_not_support">File is not supported by SDK</string>
    <string name="vgs_checkout_error_divider_mask">Divider for number can\'t be # or \\ symbol.</string>
    <string name="vgs_checkout_error_output_divider_mask">Output divider for number can\'t be # or \\ symbol.</string>
    <string name="vgs_checkout_error_divider_count_number_field">Divider for number can\'t be greater than 1 symbol.</string>
    <string name="vgs_checkout_error_divider_number_field">Divider for number can\'t be a digit.</string>
    <string name="vgs_checkout_error_output_divider_number_field">Output divider for number can\'t be a digit.</string>
    <string name="vgs_checkout_error_output_divider_count_number_field">Divider for number can\'t be greater than 1 symbol.</string>
    <string name="vgs_checkout_error_custom_brand_mask_length">The mask and card number maximum length are not equal for %1$s brand.</string>
    <string name="vgs_checkout_error_custom_host_wrong">A specified host: %1$s was not correct. Looks like you don\'t activate cname for Collect SDK on the Dashboard.</string>
    <string name="vgs_checkout_error_custom_host_wrong_short">A specified host is not correct.</string>
    <string name="vgs_checkout_error_custom_port_is_not_allowed">To protect your device we allow to use PORT only on localhost. PORT will be ignored.</string>
    <string name="vgs_checkout_error_custom_ip_is_not_allowed">Current IP is not allowed, use localhost or private network IP.</string>
    <string name="vgs_checkout_error_env_incorrect">Custom local IP and PORT can be used only in a sandbox environment.</string>
    <string name="vgs_checkout_error_not_activity_context">Context is not Activity context.</string>

    <string name="vgs_checkout_card_number_digits">0123456789</string>
    <string name="vgs_checkout_validation_regex_person">^[a-zA-Z0-9 ,\'.-]+$</string>
</resources>