<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:columnCount="1"
    tools:parentTag="com.verygoodsecurity.vgscheckout.view.checkout.grid.DividerGridLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clCountriesRoot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:minHeight="@dimen/vgs_checkout_min_form_item_height"
        android:orientation="vertical"
        android:padding="@dimen/vgs_checkout_margin_padding_size_small">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvCountrySubtitle"
            style="@style/VGSCheckout.Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/vgs_checkout_margin_padding_size_small"
            android:text="@string/vgs_checkout_address_info_country_subtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.verygoodsecurity.vgscheckout.collect.widget.VGSDropdownEventSpinner
            android:id="@+id/spinnerCountries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mtvCountrySubtitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llcAddressRoot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:minHeight="@dimen/vgs_checkout_min_form_item_height"
        android:orientation="vertical"
        android:padding="@dimen/vgs_checkout_margin_padding_size_small">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvAddressSubtitle"
            style="@style/VGSCheckout.Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/vgs_checkout_margin_padding_size_small"
            android:text="@string/vgs_checkout_address_info_address_line1_subtitle" />

        <com.verygoodsecurity.vgscheckout.collect.widget.VGSEditText
            android:id="@+id/vgsEtAddress"
            style="@style/VGSCheckout.InputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="Test"
            app:hint="@string/vgs_checkout_address_info_address_line1_hint" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:minHeight="@dimen/vgs_checkout_min_form_item_height"
        android:orientation="vertical"
        android:padding="@dimen/vgs_checkout_margin_padding_size_small">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvAddressOptionalSubtitle"
            style="@style/VGSCheckout.Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/vgs_checkout_margin_padding_size_small"
            android:text="@string/vgs_checkout_address_info_address_line2_subtitle" />

        <com.verygoodsecurity.vgscheckout.collect.widget.VGSEditText
            android:id="@+id/vgsEtAddressOptional"
            style="@style/VGSCheckout.InputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="Test"
            app:enableValidation="false"
            app:hint="@string/vgs_checkout_address_info_address_line2_hint"
            app:isRequired="false" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llcCityRoot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:minHeight="@dimen/vgs_checkout_min_form_item_height"
        android:orientation="vertical"
        android:padding="@dimen/vgs_checkout_margin_padding_size_small">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvCitySubtitle"
            style="@style/VGSCheckout.Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/vgs_checkout_margin_padding_size_small"
            android:text="@string/vgs_checkout_address_info_city_subtitle" />

        <com.verygoodsecurity.vgscheckout.collect.widget.VGSEditText
            android:id="@+id/vgsEtCity"
            style="@style/VGSCheckout.InputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hint="@string/vgs_checkout_address_info_city_hint" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llcPostalAddressRoot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:minHeight="@dimen/vgs_checkout_min_form_item_height"
        android:orientation="vertical"
        android:padding="@dimen/vgs_checkout_margin_padding_size_small"
        android:tag="Postal address">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvPostalAddressSubtitle"
            style="@style/VGSCheckout.Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/vgs_checkout_margin_padding_size_small"
            android:text="@string/vgs_checkout_address_info_zip_subtitle" />

        <com.verygoodsecurity.vgscheckout.collect.widget.VGSEditText
            android:id="@+id/vgsEtPostalAddress"
            style="@style/VGSCheckout.InputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hint="@string/vgs_checkout_address_info_zip_hint" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</merge>