<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:columnCount="2"
    android:rowCount="2"
    tools:parentTag="com.verygoodsecurity.vgscheckout.view.checkout.grid.DividerGridLayout">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:orientation="vertical"
        android:padding="@dimen/vgs_checkout_margin_padding_size_small">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvCardNumber"
            style="@style/VGSCheckout.Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/vgs_checkout_margin_padding_size_small"
            android:text="@string/vgs_checkout_card_number_subtitle" />

        <com.verygoodsecurity.vgscheckout.collect.widget.VGSCardNumberEditText
            android:id="@+id/vgsEtCardNumber"
            style="@style/VGSCheckout.InputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nextFocusDown="@+id/vgsEtExpirationDate"
            android:padding="0dp"
            app:cardBrandIconGravity="end"
            app:hint="@string/vgs_checkout_card_number_hint"
            app:imeOptions="actionNext"
            app:numberDivider=" "
            tools:text="4111111111111111" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:orientation="vertical"
        android:padding="@dimen/vgs_checkout_margin_padding_size_small">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvExpirationDate"
            style="@style/VGSCheckout.Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/vgs_checkout_margin_padding_size_small"
            android:text="@string/vgs_checkout_card_expiration_date_subtitle" />

        <com.verygoodsecurity.vgscheckout.collect.widget.ExpirationDateEditText
            android:id="@+id/vgsEtExpirationDate"
            style="@style/VGSCheckout.InputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nextFocusDown="@id/vgsEtCVC"
            android:padding="0dp"
            app:datePattern="MM/yy"
            app:datePickerModes="input"
            app:hint="@string/vgs_checkout_card_expiration_date_hint"
            app:imeOptions="actionNext"
            app:inputType="date" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:orientation="vertical"
        android:padding="@dimen/vgs_checkout_margin_padding_size_small">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvCVC"
            style="@style/VGSCheckout.Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/vgs_checkout_margin_padding_size_small"
            android:text="@string/vgs_checkout_card_verification_code_subtitle" />

        <com.verygoodsecurity.vgscheckout.collect.widget.CardVerificationCodeEditText
            android:id="@+id/vgsEtCVC"
            style="@style/VGSCheckout.InputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            app:hint="@string/vgs_checkout_card_verification_code_hint"
            app:imeOptions="actionNext"
            app:previewIconGravity="end"
            app:previewIconVisibility="always"
            tools:text="111" />
    </LinearLayout>
</merge>