<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:parentTag="android.widget.ScrollView">

    <LinearLayout
        android:id="@+id/llCardDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:background="@drawable/rounded_border_bg_white"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="@dimen/vgs_checkout_margin_padding_size_medium">

        <com.google.android.material.textview.MaterialTextView
            style="@style/VGSCheckout.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vgs_checkout_margin_padding_size_xsmall"
            android:text="@string/vgs_checkout_card_details_title" />

        <LinearLayout
            android:id="@+id/llCardHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_field_background_state_list"
            android:orientation="vertical"
            android:padding="@dimen/vgs_checkout_margin_padding_size_small">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtvCardHolderHint"
                style="@style/VGSCheckout.Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/vgs_checkout_margin_padding_size_small"
                android:text="@string/vgs_checkout_card_holder_subtitle" />

            <com.verygoodsecurity.vgscheckout.collect.widget.PersonNameEditText
                android:id="@+id/vgsEtCardHolder"
                style="@style/VGSCheckout.InputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nextFocusDown="@id/vgsEtCardNumber"
                android:padding="0dp"
                app:hint="@string/vgs_checkout_card_holder_hint"
                app:imeOptions="actionNext"
                tools:text="Dmytro" />
        </LinearLayout>

        <!--   NOTE: order of view inside this layout is IMPORTANT.-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clCardDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vgs_checkout_margin_padding_size_small"
            android:background="@drawable/input_field_background_state_list">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5" />

            <View
                android:id="@+id/viewDividerHorizontal"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/vgs_checkout_border_default"
                app:layout_constraintBottom_toBottomOf="@+id/guidelineHorizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/viewDividerHorizontal">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineVertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <View
                    android:id="@+id/viewDividerVertical"
                    android:layout_width="@dimen/vgs_checkout_default_divider_size"
                    android:layout_height="0dp"
                    android:background="@color/vgs_checkout_border_default"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/guidelineVertical"
                    app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/llDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/vgs_checkout_margin_padding_size_small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/viewDividerVertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/mtvDateHint"
                        style="@style/VGSCheckout.Description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/vgs_checkout_margin_padding_size_small"
                        android:text="@string/vgs_checkout_card_expiration_date_subtitle" />

                    <com.verygoodsecurity.vgscheckout.collect.widget.ExpirationDateEditText
                        android:id="@+id/vgsEtDate"
                        style="@style/VGSCheckout.InputField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nextFocusDown="@id/vgsEtCVC"
                        android:padding="0dp"
                        app:datePattern="MM/yy"
                        app:datePickerModes="input"
                        app:hint="@string/vgs_checkout_card_expiration_date_hint"
                        app:imeOptions="actionNext"
                        app:inputType="date" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llCVC"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/vgs_checkout_margin_padding_size_small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/viewDividerVertical"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/mtvCVCHint"
                        style="@style/VGSCheckout.Description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/vgs_checkout_margin_padding_size_small"
                        android:text="@string/vgs_checkout_card_verification_code_subtitle" />

                    <com.verygoodsecurity.vgscheckout.collect.widget.CardVerificationCodeEditText
                        android:id="@+id/vgsEtCVC"
                        style="@style/VGSCheckout.InputField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="0dp"
                        app:hint="@string/vgs_checkout_card_verification_code_hint"
                        app:imeOptions="actionDone"
                        app:previewIconGravity="end"
                        app:previewIconVisibility="always"
                        tools:text="111" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/llCardNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/vgs_checkout_margin_padding_size_small"
                app:layout_constraintBottom_toBottomOf="@+id/viewDividerHorizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mtvCardNumberHint"
                    style="@style/VGSCheckout.Description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/vgs_checkout_margin_padding_size_small"
                    android:text="@string/vgs_checkout_card_number_subtitle" />

                <com.verygoodsecurity.vgscheckout.collect.widget.VGSCardNumberEditText
                    android:id="@+id/vgsEtCardNumber"
                    style="@style/VGSCheckout.InputField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nextFocusDown="@+id/vgsEtDate"
                    android:padding="0dp"
                    app:cardBrandIconGravity="end"
                    app:hint="@string/vgs_checkout_card_number_hint"
                    app:imeOptions="actionNext"
                    app:numberDivider=" "
                    tools:text="4111111111111111" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvCardDetailsError"
            style="@style/VGSCheckout.ErrorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vgs_checkout_margin_padding_size_micro"
            android:visibility="gone"
            tools:text="Test error"
            tools:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbPay"
            style="@style/VGSCheckout.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vgs_checkout_margin_padding_size_large"
            android:layout_marginBottom="@dimen/vgs_checkout_margin_padding_size_large"
            android:enabled="false"
            android:text="@string/vgs_checkout_pay_button_title"
            app:icon="@drawable/ic_lock_white_10dp" />
    </LinearLayout>
</merge>